# swift-nio

./: .clang-format  .dockerignore  .gitignore  .swift-format  Cargo.toml  LICENSE  Makefile  README.dist.md  README.md  build-app.sh  config.sh  convert.sh  init-net.sh  justfile  make_manifest.py  netpair-client.sh  netpair-ip-client.sh  netpair-ip-router.sh  netpair-l2-router.sh  netpair-router.sh  publish-update.sh  submit-notary.sh  treefmt.toml  upload.sh
bins/: Makefile  (+3 more)
exp/syscall/mac-ipc-rs/: Cargo.toml
exp/syscall/mac-ipc-rs/src/: main.rs  park.rs
exp/usb/usbip/: Cargo.toml
exp/usb/usbip/.claude/: settings.local.json
exp/usb/usbip/src/: device_capture.rs  device_manager.rs  iokit_usb.rs  ioregistry_usb.rs  lib.rs  proto.rs  simple_usb.rs  usb.rs
rootfs/utils/starry/: .gitignore  Cargo.toml  README.md
rootfs/utils/starry/src/: buffer_stack.rs  interrogate.rs  lib.rs  path_stack.rs  recurse.rs  sys.rs
rootfs/utils/starry/tests/: stress.tar.zst
rootfs/vcontrol/: Cargo.toml
rootfs/vcontrol/src/: error.rs  main.rs
src/arch/: Cargo.toml
src/arch/src/: lib.rs
src/arch/src/aarch64/: fdt.rs  mod.rs
src/arch/src/x86_64/: bzimage.rs  gdt.rs  interrupts.rs  mod.rs  mptable.rs  msr.rs  regs.rs
src/devices/: Cargo.toml
src/devices/benches/: virtiofs.rs
src/devices/src/: bus.rs  hvc.rs  lib.rs
src/devices/src/legacy/: gic.rs  mod.rs
src/devices/src/virtio/: descriptor_utils.rs  device.rs  linux_errno.rs  mmio.rs  mod.rs  queue.rs
src/gruel/: Cargo.toml  README.md
src/gruel/examples/: mio.rs  parker.rs  worker.rs
src/gruel/src/: lib.rs  shutdown.rs  signals.rs  startup.rs  util.rs
src/gruel/src/signals/: channel.rs  impl_dummy.rs  impl_naive.rs  impl_optimized.rs  mio.rs  mod.rs  multiplex.rs  std_wakers.rs
src/hvf/: Cargo.toml
src/hvf/src/: hypercalls.rs  lib.rs  memory.rs
src/hvf/src/aarch64/: bindings.rs  error.rs  mod.rs  pvgic.rs  tlb.rs  vcpu.rs  vm.rs  vm_config.rs  weak_link.rs
src/hvf/src/profiler/: buffer.rs  firefox.rs  ktrace.rs  memory.rs  mod.rs  processor.rs  sched.rs  server.rs  stats.rs  symbolicator.rs  thread.rs  time.rs  transform.rs  unwinder.rs
src/hvf/src/x86_64/: bindings.rs  bsd.rs  mod.rs
src/libkrun/: Cargo.toml  build.rs
src/libkrun/src/: lib.rs  machine.rs  main.rs  network.rs
src/utils/: Cargo.toml
src/utils/src/: bits.rs  gruel.rs  hypercalls.rs  kernel_symbols.rs  lib.rs  mach_time.rs  memory.rs  os_unfair_lock.rs  parker.rs  qos.rs  span.rs
src/utils/src/macos/: epoll.rs  eventfd.rs
vinit/: Cargo.toml  README.md  about.hbs  about.toml
vinit/src/: action.rs  blockdev.rs  btrfs.rs  ethtool.rs  filesystem.rs  helpers.rs  loopback.rs  main.rs  memory.rs  pidfd.rs  rosetta.rs  service.rs  shutdown.rs  startup.rs
vinit/src/vcontrol/: btrfs.rs  chrony.rs  error.rs  mod.rs
virtue/: Cargo.toml  LICENSE  Makefile
virtue/.cargo/: config.toml
virtue/.github/workflows/: code_quality-aarch64-darwin.yml
virtue/cpuinfo/: coffeelake-8100b  cometlake-10700k  cometlake-10850k
virtue/exp/libkrun-asm-tests/: Cargo.toml  Justfile
virtue/exp/libkrun-asm-tests/benches/: bench.rs
virtue/exp/libkrun-asm-tests/src/: lib.rs
virtue/exp/libkrun-asm-tests/ui-tests/: increment.test  index_guest_inlined.test  index_guest_mem_inlined.test  index_guest_non_pow2_runtime.test  index_guest_runtime.test  index_guest_sized_constant.test  index_guest_sized_constant_1.test  index_guest_sized_constant_2.test  index_guest_sized_constant_3.test  index_guest_sized_constant_4.test  index_guest_sized_runtime.test  index_regular_inlined.test  index_regular_non_pow2_runtime.test  index_regular_runtime.test  index_slice_inlined.test  index_slice_sized_constant_1.test  index_slice_sized_constant_2.test  index_slice_sized_constant_3.test  index_slice_sized_runtime_1.test  index_slice_sized_runtime_2.test  multiply_by_five.test  read_guest_ref.test  read_regular_ref.test  sub_index_guest.test  sub_index_regular.test
virtue/exp/ui-test-harness/: Cargo.toml
virtue/exp/ui-test-harness/src/: formatter.rs  main.rs
virtue/src/arch/: Cargo.toml
virtue/src/arch/src/: lib.rs
virtue/src/counter/: Cargo.toml
virtue/src/counter/src/: lib.rs
virtue/src/cpuid/src/: lib.rs
virtue/src/devices/: Cargo.toml
virtue/src/devices/benches/: virtiofs.rs
virtue/src/devices/src/: bus.rs  hvc.rs
virtue/src/filemap/: Cargo.toml  build.rs
virtue/src/filemap/ffi/: safe_memcpy.c
virtue/src/filemap/src/: lib.rs
virtue/src/gicv3/: Cargo.toml  README.md
virtue/src/gicv3/src/: device.rs  device_read.rs  device_write.rs  lib.rs  mmio.rs  mmio_util.rs
virtue/src/gruel/: Cargo.toml  README.md
virtue/src/gruel/src/: mpsc.rs  shutdown.rs  util.rs
virtue/src/hvf/: Cargo.toml
virtue/src/kernel/: Cargo.toml
virtue/src/libkrun/: Cargo.toml
virtue/src/libvirtue/: Cargo.toml
virtue/src/memmage/: Cargo.toml
virtue/src/newt/: Cargo.toml  README.md
virtue/src/rutabaga_gfx/: Cargo.toml
virtue/src/sigstack/: Cargo.toml  build.rs
virtue/src/sysx/: Cargo.toml
virtue/src/utils/: Cargo.toml  build.rs
virtue/src/vmm/: Cargo.toml
virtue/src/vmm-ids/: Cargo.toml
virtue/src/vtest/: Cargo.toml
wormhole/: Cargo.toml  Makefile  build.rs  build.sh  publish-local.sh  publish.sh  wormhole-stub.c
wormhole/cnf-gpt/: .gitignore  README.md  download-db.sh  gen-batch.py  gen-overrides.py  make-batch.sh  merge-overrides.py  overrides.csv
wormhole/os/: docker.nix  flake.nix  nix.conf  rootfs.nix  test-flake.nix
wormhole/os/t/: flake.nix
wormhole/os/test/: flake.nix
wormhole/os/zsh/: .zshrc  antibody.list  clone.sh  repos.list
wormhole/proto/: wormhole.proto
wormhole/remote/: Dockerfile  Dockerfile-client  Dockerfile-server  mount-overlayfs.sh  remote-run.sh
wormhole/remote/wormhole/: generate_proto.sh  go.mod  go.sum  wormhole.proto
wormhole/schema/: wormhole.proto
wormhole/scripts/: make_manifest_index.py
wormhole/src/: asyncfile.rs  flock.rs  lib.rs  model.rs  newmount.rs  paths.rs  pidfd.rs  rpc.rs  termios.rs
wormhole/wormholefs/: Cargo.toml  build.rs
wormhole/wormholefs/src/: flock.rs  lib.rs  newmount.rs
(+2636 files in other folders)
