[workspace]
members = [
    "src/counter-proc",
    "src/counter",
    "src/gicv3",
    "src/gruel",
    "src/kruntest",
    "src/libkrun",
    "src/newt", "src/vmm-ids", "src/memmage",
]
resolver = "2"
#panic = "abort"

[profile.release]
#panic = "abort"
lto = true
strip = true
# rustflags = []

[profile.release-with-debug]
inherits = "release"
lto = "thin"
debug = true
