[workspace]
members = [
    "src/counter-proc",
    "src/counter",
    "src/gicv3",
    "src/gruel",
    "src/kruntest",
    "src/libkrun",
    "src/newt",
    "src/vmm-ids",
    "src/memmage",
    "src/filemap",
    "src/sysx",
]
resolver = "2"
#panic = "abort"

[profile.release]
#panic = "abort"
lto = "thin"
strip = true
# rustflags = []

[profile.release-with-debug]
inherits = "release"
debug = true
