[workspace]
members = [
    "src/counter-proc",
    "src/counter",
    "src/gicv3",
    "src/gruel",
    "src/kruntest",
    "src/libkrun",
    "src/newt",
    "src/vmm-ids",
    "src/memmage",
    "src/filemap",
    "src/sysx",
]
resolver = "2"

[profile.release]
lto = "thin"
# libkrun builds a static library
# we strip the final Go binary, so preserve symbols and DWARF here
strip = false
# always generate debug info so we can split it (dSYM) for release
debug = true
