[package]
name = "vinit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = "0.6.18"
blake3 = "1.4.0"
chrony-candm = "0.1.1"
futures = "0.3.28"
futures-util = "0.3.28"
hex = "0.4.3"
ifstructs = "0.1.1"
mkswap = "0.1.1"
netlink-packet-route = "0.15.0"
nix = "0.26.2"
once_cell = "1.18.0"
qbsdiff = "1.4.1"
rtnetlink = { version = "0.12.0" }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
sntpc = "0.3.6"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[profile.release]
strip = true
