[package]
name = "vinit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = "0.8.4"
base64 = "0.22.1"
bincode = "1.3.3"
blake3 = "1.4.0"
elf = "0.7.3"
futures = "0.3.28"
futures-util = "0.3.28"
hex = "0.4.3"
libc = "0.2.158"
mkswap = "0.1.1"
netlink-packet-core = "0.7.0"
netlink-packet-route = "0.19.0"
nix = "0.26.2"
once_cell = "1.18.0"
qbsdiff = "1.4.1"
rtnetlink = "0.14.1"
scopeguard = "1.2.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
signal-hook = "0.3.15"
sntpc = "0.3.6"
thiserror = "1.0.40"
tokio = { version = "1.43.1", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[profile.release]
strip = true
