[package]
name = "vinit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
base64 = "0.22.1"
bincode = "2.0.1"
blake3 = "1.8.2"
elf = "0.8.0"
futures = "0.3.31"
futures-util = "0.3.31"
hex = "0.4.3"
libc = "0.2.172"
mkswap = "0.1.1"
netlink-packet-core = "0.7.0"
netlink-packet-route = "0.24.0"
nix = { version = "0.30.1", features = ["resource", "mount", "fs", "time", "hostname", "reboot", "signal", "process", "ioctl"] }
once_cell = "1.21.3"
qbsdiff = "1.4.3"
rtnetlink = "0.17.0"
scopeguard = "1.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
signal-hook = "0.3.18"
sntpc = "0.5.2"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[profile.release]
strip = true
