[workspace]
resolver = "2"
members = [
    "src/counter-proc",
    "src/counter",
    "src/filemap",
    "src/gicv3",
    "src/gruel",
    "src/kruntest",
    "src/libkrun",
    "src/memmage",
    "src/newt",
    "src/sysx",
    "src/vmm-ids",
]
exclude = ["exp"]

[profile.release]
lto = true
strip = true

[profile.release-with-debug]
inherits = "release"
lto = "thin"

# libkrun builds a static library
# we strip the final Go binary, so preserve symbols and DWARF here
strip = false

# always generate debug info so we can split it (dSYM) for release
debug = true

[patch.crates-io.cc]
git = "https://github.com/rust-lang/cc-rs.git"

# We have to pin `cc` to `v1.1.31` since later versions override `-mmacosx-version-min=12.3` with
# `--target=arm64-apple-macosx14.2`. This SDK version is unsupported by `symbolic-demangle 12.12.1`.
#
# According to `git bisect`, `9c663cae43d2` introduced this issue for us.
tag = "cc-v1.1.31"
