[workspace]
resolver = "2"
members = [
    "src/counter-proc",
    "src/counter",
    "src/filemap",
    "src/gicv3",
    "src/gruel",
    "src/vtest",
    "src/libvirtue",
    "src/memmage",
    "src/newt",
    "src/sysx",
    "src/vmm-ids",
    "src/sigstack",
]
exclude = ["exp"]

[profile.release]
lto = "thin"
# libvirtue builds a static library
# we strip the final Go binary, so preserve symbols and DWARF here
strip = false
# always generate debug info so we can split it (dSYM) for release
debug = true
