[package]
name = "wormhole"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.172"
nix = { version = "0.30.1", features = ["fs", "dir", "mount", "ioctl", "user", "sched", "socket", "uio", "poll", "signal", "event", "term", "inotify"] }
tracing = { version = "0.1.41", features = ["release_max_level_info"] }
tracing-subscriber = "0.3.19"
anyhow = { version = "1.0.98", features = ["backtrace"] }
xattr = "1.5.0"
clap = { version = "4.5.39", features = ["derive"] }
# rustls makes static build easier
reqwest = { version = "0.12.19", features = ["blocking", "json", "rustls-tls-native-roots"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
colored = "3.0.0"
# aws-lc-rs requires cmake, etc. use ring to simplify build
rustls = { version = "0.23.27", features = ["ring", "log", "logging", "std", "tls12"], default-features = false }
ctrlc = "3.4.7"
copy_dir = "0.1.3"
# no boringssl
jwt-simple = { version = "0.12.12", default-features = false, features = ["pure-rust"] }
bincode = "2.0.1"
tokio = { version = "1.45", features = ["full"] }
prost = "0.13.5"
async-trait = "0.1.88"
tokio-util = "0.7.15"
semver = "1.0.26"

[profile.release]
strip = true

[profile.release-with-debug]
inherits = "release"
debug = true

[build-dependencies]
prost-build = "0.13.5"
