[package]
name = "vcontrol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
axum = "0.5.17"
nix = "0.25.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[profile.release]
strip = true
