[package]
name = "devices"
version = "0.1.0"
authors = ["The Chromium OS Authors"]
edition = "2021"

[features]
default = ["net", "blk"]
tee = []
amd-sev = ["blk", "tee"]
net = []
blk = []
efi = ["blk", "net"]
gpu = ["rutabaga_gfx", "thiserror", "zerocopy", "zerocopy-derive"]

[dependencies]
bitflags = "1.2.0"
crossbeam-channel = "0.5"
env_logger = "0.9.0"
libc = ">=0.2.39"
log = { version = "0.4.0", features = ["release_max_level_info"] }
nix = { version = "0.24.1", features = ["poll"] }
rand = "0.8.5"
thiserror = { version = "1.0", optional = true }
virtio-bindings = "0.2.0"
vm-memory = { version = ">=0.13", features = ["backend-mmap"] }
zerocopy = { version = "0.6.3", optional = true }
zerocopy-derive = { version = "0.6.3", optional = true }

arch = { path = "../arch" }
utils = { path = "../utils" }
polly = { path = "../polly" }
gicv3 = { path = "../gicv3" }
rutabaga_gfx = { path = "../rutabaga_gfx", features = [
    "virgl_renderer",
    "virgl_renderer_next",
], optional = true }
once_cell = "1.19.0"
serde = { version = "1.0.197", features = ["derive"] }
anyhow = "1.0.82"
rustc-hash = "1.1.0"

[target.'cfg(target_os = "macos")'.dependencies]
hvf = { path = "../hvf" }
lru = ">=0.9"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "virtiofs"
harness = false
