[package]
name = "gruel"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.4.2"
cfgenius = "0.1.1"
counter = { version = "0.1.0", path = "../counter" }
crossbeam-channel = "0.5.13"
derive-where = "1.2.7"
generational-arena = "0.2.9"
log = "0.4.21"
mio = "0.8.11"
newt = { version = "0.1.0", path = "../newt" }
parking_lot = "0.12.1"
scopeguard = "1.2.0"
thiserror = "1.0.58"
