[package]
name = "gruel"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.5.0"
bumpalo = "3.16.0"
cfgenius = "0.1.1"
counter = { version = "0.1.0", path = "../counter" }
crossbeam-channel = "0.5.13"
derive-where = "1.2.7"
generational-arena = "0.2.9"
memmage = { version = "0.1.0", path = "../memmage" }
mio = { version = "0.8.11", features = ["os-poll"] }
newt = { version = "0.1.0", path = "../newt" }
parking_lot = "0.12.1"
scopeguard = "1.2.0"
smallbox = "0.8.2"
thiserror = "1.0.58"
tracing = "0.1.40"

[target.'cfg(loom)'.dependencies]
loom = "0.7.2"
