[package]
name = "hvf"
version = "0.1.0"
authors = ["Sergio Lopez <slp@sinrega.org>"]
edition = "2021"

[dependencies]
crossbeam-channel = "0.5"
iced-x86 = "1.21.0"
thiserror = "1.0.59"
tracing = { version = "0.1.40", features = ["release_max_level_info"] }
vm-memory = { version = ">=0.13", features = ["backend-mmap"] }
arch_gen = { path = "../arch_gen" }
arch = { path = "../arch" }
bitflags = "2.5.0"
anyhow = "1.0.83"
rustc-hash = "1.1.0"
libc = "0.2.153"
nix = "0.28.0"
counter = { path = "../counter" }
dlopen = "0.1.8"
dlopen_derive = "0.1.4"
gruel = { version = "0.1.0", path = "../gruel" }
vmm-ids = { version = "0.1.0", path = "../vmm-ids" }
once_cell = "1.19.0"
num-derive = "0.4.2"
num-traits = "0.2.19"

[target.'cfg(target_arch = "x86_64")'.dependencies]
cpuid = { path = "../cpuid" }
