[package]
name = "libkrun"
version = "1.8.1"
authors = ["Sergio Lopez <slp@redhat.com>"]
edition = "2021"
build = "build.rs"

[lib]
name = "krun"
crate-type = ["staticlib"]

[features]
default = ["net", "blk"]
tee = []
amd-sev = [ "blk", "tee" ]
net = []
blk = []
efi = [ "blk", "net" ]
gpu = []

[dependencies]
crossbeam-channel = "0.5"
env_logger = "0.9.0"
libc = ">=0.2.39"
log = { version = "0.4.0", features = ["release_max_level_info"] }
once_cell = "1.4.1"

devices = { path = "../devices" }
polly = { path = "../polly" }
utils = { path = "../utils" }
vmm = { path = "../vmm" }
anyhow = "1.0.80"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

[target.'cfg(target_os = "macos")'.dependencies]
hvf = { path = "../hvf" }
