[package]
name = "krun"
version = "1.8.1"
authors = ["Sergio Lopez <slp@redhat.com>"]
edition = "2021"
build = "build.rs"

[lib]
name = "krun"
crate-type = ["lib", "staticlib"]

[features]
default = ["net", "blk"]
tee = []
amd-sev = ["blk", "tee"]
net = []
blk = []
efi = ["blk", "net"]
gpu = []

[dependencies]
crossbeam-channel = "0.5"
libc = ">=0.2.39"
tracing = { version = "0.1.40", features = ["release_max_level_info"] }
tracing-subscriber = "0.3.18"
once_cell = "1.4.1"

devices = { path = "../devices" }
polly = { path = "../polly" }
utils = { path = "../utils" }
vmm = { path = "../vmm" }
anyhow = "1.0.80"
color-backtrace = "0.6.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
nix = { version = "0.28.0", features = ["time"] }

counter = { path = "../counter" }
arch = { version = "0.1.0", path = "../arch" }

[target.'cfg(target_os = "macos")'.dependencies]
hvf = { path = "../hvf" }
