[package]
name = "wormholefs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.151"
nix = { version = "0.27.1", features = ["fs", "dir", "mount", "ioctl", "user", "sched", "socket", "uio"] }
vm-memory = "0.12"
tracing = { version = "0.1.40", features = ["release_max_level_info"] }
tracing-subscriber = "0.3.18"
anyhow = { version = "1.0.80", features = ["backtrace"] }
xattr = "1.3.1"
clap = { version = "4.5.2", features = ["derive"] }
# rustls makes static build easier
reqwest = { version = "0.11.25", features = ["blocking", "json", "rustls-tls-native-roots"], default-features = false }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
colored = "2.1.0"
# aws-lc-rs requires cmake, etc. use ring to simplify build
rustls = { version = "0.23.1", features = ["ring", "log", "logging", "std", "tls12"], default-features = false }
ctrlc = "3.4.4"
copy_dir = "0.1.3"

[profile.release]
strip = true

[profile.release-with-debug]
inherits = "release"
debug = true
