[package]
name = "mac-ipc-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hdrhistogram = "7.5.4"
libc = "0.2.154"
mach2 = "0.4.2"
mio = "0.8.11"
nix = { version = "0.28.0", features = ["event"] }
tokio = { version = "1.38.2", features = ["full"] }
