[package]
name = "starry"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.89", features = ["backtrace"] }
bincode = "2.0.0-rc.3"
bitflags = "2.6.0"
bumpalo = "3.16.0"
bytemuck = { version = "1.18.0", features = ["derive", "min_const_generics"] }
itoa = "1.0.11"
libc = "0.2.169"
nix = { version = "0.29.0", features = ["fs", "uio", "zerocopy", "dir", "ioctl"] }
numtoa = "0.2.4"
smallvec = "1.13.2"
thiserror = "1.0.64"
zstd = { version = "0.13.2", features = ["zstdmt"] }

[profile.release]
strip = true

[profile.prof]
inherits = "release"
strip = false
debug = true
