[package]
name = "starry"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
bincode = "2.0.1"
bitflags = "2.9.1"
bumpalo = "3.17.0"
bytemuck = { version = "1.23.0", features = ["derive", "min_const_generics"] }
itoa = "1.0.15"
libc = "0.2.172"
nix = { version = "0.30.1", features = ["fs", "uio", "zerocopy", "dir", "ioctl"] }
numtoa = "0.2.4"
smallvec = "1.15.0"
thiserror = "2.0.12"
zstd = { version = "0.13.3", features = ["zstdmt"] }

[profile.release]
strip = true

[profile.prof]
inherits = "release"
strip = false
debug = true
