[package]
name = "arch"
version = "0.1.0"
authors = ["The Chromium OS Authors"]
edition = "2021"

[features]
tee = []
amd-sev = ["tee"]
efi = []

[dependencies]
anyhow = "1.0.98"
arch_gen = { path = "../arch_gen" }
bytemuck = { version = "1.23.0", features = ["derive", "min_const_generics"] }
gicv3 = { path = "../gicv3" }
libc = ">=0.2.39"
rand = "0.9.1"
utils = { path = "../utils" }

[target.'cfg(target_os = "linux")'.dependencies]
kvm-bindings = { version = ">=0.6", features = ["fam-wrappers"] }
kvm-ioctls = ">=0.15"

[target.'cfg(target_arch = "aarch64")'.dependencies]
vm-fdt = ">= 0.2.0"

[dev-dependencies]
utils = { path = "../utils" }
