[package]
name = "devices"
version = "0.1.0"
authors = ["The Chromium OS Authors"]
edition = "2021"

[features]
default = ["net", "blk"]
tee = []
amd-sev = ["blk", "tee"]
net = []
blk = []
efi = ["blk", "net"]
gpu = ["rutabaga_gfx", "thiserror"]

[dependencies]
bytemuck = { version = "1.23.0", features = ["derive", "min_const_generics"] }
bitflags = "2.9.1"
crossbeam-channel = "0.5"
libc = ">=0.2.39"
tracing = { version = "0.1.41", features = ["release_max_level_info"] }
nix = { version = "0.30.1", features = ["poll", "fs", "uio", "socket", "net"] }
rand = "0.9.1"
thiserror = { version = "2.0.12", optional = true }
virtio-bindings = "0.2.5"
zerocopy = { version = "0.8.25" }
zerocopy-derive = { version = "0.8.25" }

arch = { path = "../arch" }
utils = { path = "../utils" }
gicv3 = { path = "../gicv3" }
rutabaga_gfx = { path = "../rutabaga_gfx", features = [
    "virgl_renderer",
    "virgl_renderer_next",
], optional = true }
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.98"
rustc-hash = "2.1.1"
dashmap = "6.1.0"
smallvec = "1.15.0"
counter = { version = "0.1.0", path = "../counter" }
gruel = { version = "0.1.0", path = "../gruel" }
vmm-ids = { version = "0.1.0", path = "../vmm-ids" }
num-traits = "0.2.19"
num-derive = "0.4.2"
smol_str = "0.3.2"
derive_more = { version = "2.0.1", features = ["display", "from", "into"] }
newt = { version = "0.1.0", path = "../newt" }
memmage = { version = "0.1.0", path = "../memmage" }
mio = { version = "1.0.4", features = ["os-poll", "os-ext"] }
bitfield = "0.19.1"
smallbox = "0.8.6"
mach2 = "0.4.2"
parking_lot = "0.12.4"
arc-swap = "1.7.1"
filemap = { version = "0.1.0", path = "../filemap" }
sysx = { version = "0.1.0", path = "../sysx" }
base64 = "0.22.1"

[target.'cfg(target_os = "macos")'.dependencies]
hvf = { path = "../hvf" }
lru = ">=0.9"

[dev-dependencies]
criterion = "0.6"

[[bench]]
name = "virtiofs"
harness = false
