[package]
name = "filemap"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
libc = "0.2.172"
mach2 = "0.4.2"
nix = "0.30.1"
sigstack = { version = "0.1.0", path = "../sigstack" }
utils = { version = "0.1.0", path = "../utils" }

[build-dependencies]
cc = "1.2"
sigstack = { version = "0.1.0", path = "../sigstack" }
