[package]
name = "libvirtue"
version = "1.8.1"
authors = ["Sergio Lopez <slp@redhat.com>"]
edition = "2021"
build = "build.rs"

[lib]
name = "virtue"
crate-type = ["lib", "staticlib"]

[features]
default = ["net", "blk"]
tee = []
amd-sev = ["blk", "tee"]
net = []
blk = []
efi = ["blk", "net"]
gpu = []

[dependencies]
crossbeam-channel = "0.5"
libc = ">=0.2.39"
tracing = { version = "0.1.41", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
once_cell = "1.21.3"

devices = { path = "../devices" }
utils = { path = "../utils" }
vmm = { path = "../vmm" }
anyhow = "1.0.98"
color-backtrace = "0.7.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
nix = { version = "0.30.1", features = ["time"] }

counter = { path = "../counter" }
arch = { version = "0.1.0", path = "../arch" }
gruel = { version = "0.1.0", path = "../gruel" }

[target.'cfg(target_os = "macos")'.dependencies]
hvf = { path = "../hvf" }
