[package]
name = "utils"
version = "0.1.0"
authors = ["Amazon Firecracker team <firecracker-devel@amazon.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bincode = "=2.0.0-rc.3"
bitflags = "2.5.0"
bytemuck = { version = "1.17.1", features = ["derive", "min_const_generics"] }
derive-where = "1.2.7"
gruel = { version = "0.1.0", path = "../gruel" }
libc = ">=0.2.85"
mach2 = "0.4.2"
memmage = { version = "0.1.0", path = "../memmage" }
mio = "0.8.11"
nix = "0.28.0"
sysx = { version = "0.1.0", path = "../sysx" }
once_cell = "1.19.0"
scopeguard = "1.2.0"
smallvec = "1.13.2"
thiserror = "1.0.63"
tracing = { version = "0.1.40", features = ["release_max_level_info"] }
vm-memory = { version = ">=0.13", features = ["backend-mmap"] }
vmm-sys-util = ">=0.11"
